--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
 
   <div class="skills_table">
     <table>
-    <tr>
+    <tr class="header">
       <td>Name</td>
       <td>Skill</td>
       <td>Years</td>
